# tts_webui_extension.mms

./: README.md  pyproject.toml  setup.py
extension_mms/: main.py
extension_mms/resources/: __init__.py
tts_webui_extension/mms/: __init__.py  main.py
tts_webui_extension/mms/resources/: mms-languages-iso639-3.txt
